deployment.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: production

---

apiVersion: v1
kind: Service
metadata:
  name: pdf-backend
  namespace: production
  labels:
    app: pdf-backend
spec:
  selector:
    app: pdf-backend
  ports:
  - port: 3000
    name: http
    targetPort: 3000
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-backend
  namespace: production
spec:
  selector:
    matchLabels:
      app: pdf-backend
  strategy:
    type: RollingUpdate
  template: #Template for container
    metadata:
      labels:
        app: pdf-backend
    spec:
      containers:
      - name: pdf-backend
        image:  asia.gcr.io/$PROJECT_ID/production/pdf-upload:$SHORT_SHA
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: pdf-backend
        resources:
          requests:
            cpu: 50m

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdf-backend
  namespace: production
  annotations:
    kubernetes.io/ingress.global-static-ip-name: pdf-backend
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: app.pdf-backend.com
      http:
        paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: pdf-backend
              port: 
                number: 3000
